--- a/components/navbar.html
+++ b/components/navbar.html
@@ -115,7 +115,7 @@
         <li class="nav-item"><a class="nav-link" href="rent.html" data-page="rent">Rent</a></li>
         
         <!-- User Dropdown -->
-        <li class="nav-item dropdown ms-2">
+        <!-- <li class="nav-item dropdown ms-2">
           <a class="nav-link dropdown-toggle" href="#" id="userDropdown" 
              data-bs-toggle="dropdown" aria-expanded="false">
             <i class="bi bi-person-circle"></i> Account
@@ -134,7 +134,7 @@
               <i class="bi bi-box-arrow-right me-2"></i>Logout
             </a></li>
           </ul>
-        </li>
+        </li> -->
       </ul>
 
       <div class="navbar-user-info ms-lg-3 mt-3 mt-lg-0">
