--- a/components/navbar.html
+++ b/components/navbar.html
@@ -114,7 +114,7 @@
         <li class="nav-item"><a class="nav-link" href="mobil.html" data-page="mobil">Mobil</a></li>
         <li class="nav-item"><a class="nav-link" href="rent.html" data-page="rent">Rent</a></li>
         
-        <li class="nav-item"><a class="nav-link" href="profit-loss.html" data-page="rent">Profit-Loss</a></li>
+        <li class="nav-item"><a class="nav-link" href="khata.html" data-page="rent">Khata</a></li>
         
         <!-- User Dropdown -->
         <!-- <li class="nav-item dropdown ms-2">
