navbar code changes

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -347,18 +347,13 @@
           </a>
         </li>
 
-        <!-- customer  -->
-         <li>
-              <a class="dropdown-item" href="customers.html" data-page="customers">
-                <i class="bi bi-people-fill"></i>Customer List
-              </a>
-          </li>
+        
         <!-- Customers dropdown -->
-        <!-- <li class="nav-item dropdown">
+        <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" data-page="customers">
             <i class="bi bi-people nav-icon"></i>Customers
           </a>
-          <ul class="dropdown-menu">
+          <!-- <ul class="dropdown-menu">
             <li><span class="dropdown-header-label">Customers</span></li>
             
             <li>
@@ -366,8 +361,8 @@
                 <i class="bi bi-person-lines-fill"></i>Customer Details
               </a>
             </li>
-          </ul>
-        </li> -->
+          </ul> -->
+        </li>
 
         <!-- Transactions -->
         <li class="nav-item">
