--- a/components/navbar.html
+++ b/components/navbar.html
@@ -347,13 +347,19 @@
           </a>
         </li>
 
-        
+        <!-- customer -->
+        <li class="nav-item">
+          <a class="nav-link" href="customers.html" data-page="transactions">
+            <i class="bi bi-people nav-icon"></i>Customers
+          </a>
+        </li>
+
         <!-- Customers dropdown -->
-        <li class="nav-item dropdown">
+        <!-- <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" data-page="customers">
             <i class="bi bi-people nav-icon"></i>Customers
           </a>
-          <!-- <ul class="dropdown-menu">
+          <ul class="dropdown-menu">
             <li><span class="dropdown-header-label">Customers</span></li>
             
             <li>
@@ -361,8 +367,8 @@
                 <i class="bi bi-person-lines-fill"></i>Customer Details
               </a>
             </li>
-          </ul> -->
-        </li>
+          </ul>
+        </li> -->
 
         <!-- Transactions -->
         <li class="nav-item">
