navbar code changes

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -349,7 +349,7 @@
 
         <!-- customer -->
         <li class="nav-item">
-          <a class="nav-link" href="customers.html" data-page="transactions">
+          <a class="nav-link" href="customers.html" data-page="customers">
             <i class="bi bi-people nav-icon"></i>Customers
           </a>
         </li>
